--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -421,7 +421,7 @@ select:valid ~ span {
     font-size: 0.80em;
     padding: 0 6px;
     color: var(--cyny-green);
-    background-color: #a243d2;;
+    background-color: #a243d2;
     color: white;
     border-radius: 2px;
 }
@@ -439,43 +439,41 @@ select:valid {
     border: 1px solid var(--green);
 }
 
-.success-message {
-    display: none;
-    background-color: var(--green);
-    color: white;
-    padding: 20px;
-    text-align: center;
-    border-radius: 5px;
-    margin-top: 20px;
-}
-
-.success-message p {
-    margin: 0;
-}
-
 /* Adicione estilos para o modal */
 .modal-overlay {
     display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.modal {
-    background: #fff;
-    padding: 20px;
+    position: absolute;
+    background: #000000;
     border-radius: 8px;
     text-align: center;
+    box-sizing: border-box;
+    padding: 20px; /* Adicionar padding para espaçamento interno */
+    width: 80%; /* Reduzir a largura do modal para 80% da largura da tela */
+    max-width: 600px; /* Definir a largura máxima do modal para 600 pixels */
+    color: white; /* Cor do texto */
+    top: calc(100% + 10px); /* Posicionar abaixo do botão, considerando uma margem de 10px */
+    left: 50%; /* Centralizar horizontalmente */
+    transform: translateX(-50%);
 }
 
-/* Adicione estilos para esconder/mostrar o modal */
+/* Estilização para os textos em colunas no modal */
+.modal-text {
+    font-size: 14px;
+    margin-bottom: 15px;
+    display: block; /* Alterar para exibir textos em bloco */
+}
+
+/* Estilização para o botão de fechar */
+.close-button {
+    background-color: #d9534f;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right; /* Alinhar o botão à direita */
+}
+
 .disabled {
     display: none;
 }
-
-/* Adicione estilos para animação do modal, se desejar */
