Projeto concluído. Envio de emails automático com AJAX realizado

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -485,7 +485,7 @@ select:valid {
     display: none;
 }
 .close-modal-btn:hover {
-    background-color: firebrick;
+    background-color: var(--dusky-green);
     color: lightgray;
 }
 
