--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@
 
 
         .image-container>ul {
-            margin-top: 60px;
+            margin-top: 20px;
             margin-left: 50px;
             padding: 30px;
         }
@@ -445,11 +445,7 @@
                 transform: scale(1);
             }
 
-            .image-container>p {
-                font-size: 24px;
-            }
-
-            .image-container>h1 {
+            .image-container .company {
                 margin-right: 35px;
             }
 
