--- a/style.css
+++ b/style.css
@@ -211,29 +211,19 @@
             padding: 15px;
         }
 
-<<<<<<< HEAD
-        .image-container .flexNav {
-            display: flex;
-            
-=======
 
         .image-container>ul {
-            margin-top: 20px;
+            margin-top: 60px;
             margin-left: 50px;
             padding: 30px;
->>>>>>> 84842b591977d9d6da34edf67bbe92b8c9939509
         }
 
-        .image-container .flexNav img {
-            justify-items: flex-start;
-        }
-
-        .image-container .company {
-            margin: 0 auto;
-        }
-
-        .customBtn {
-            background-color: #1d2b3a;
+        .company,
+        .image-container>.quote {
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            font-size: 24px;
         }
 
         .company {
@@ -254,15 +244,14 @@
             display: none;
         }
 
-        .list {
-            font-size: 16px;
-            margin-left: 50px;
+        .company p {
+            margin-bottom: 200px;
         }
 
-        .custom-alert {
-            width: 50%;
-            height: 50px;
-            background-color: var(--darky);
+        .list {
+            margin-bottom: 100px;
+            font-size: 14px;
+            margin-left: 50px;
         }
 
         /*
@@ -456,19 +445,22 @@
                 transform: scale(1);
             }
 
-<<<<<<< HEAD
             .image-container>p {
                 font-size: 24px;
-=======
-            .image-container .company {
+            }
+
+            .image-container>h1 {
                 margin-right: 35px;
->>>>>>> 84842b591977d9d6da34edf67bbe92b8c9939509
             }
 
             .list {
                 font-size: 12px;
                 margin-right: 25px;
                 margin-bottom: 25px;
+            }
+
+            .quote {
+                margin-top: -50px;
             }
 
             .left-container {
